--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storepage",
-  "homepage": "http://arsenpoghosyan1989.github.io/Pros&Cons-list-app.git",
+  "homepage": "http://arsenpoghosyan1989.github.io/Pros-Const-list-app.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
