--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storepage",
+  "name": "pros_cons",
   "homepage": "http://arsenpoghosyan1989.github.io/Pros-Const-list-app.git",
   "version": "0.1.0",
   "private": true,
